# Pimpl

./: CMakeLists.txt  main.cpp
include/: gadget.hpp  widget.hpp
src/: gadget.cpp  widget.cpp
test/: main_gtest.cpp  test_gadget_methods.cpp  test_widget_methods.cpp
